daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
   name: ssd-monitor
spec:
   selector:
     matchLabels:
        app: dev
   template:
        metadata:
          labels:
            app: dev
        spec:
          containers:
             - image: luksa/ssd-monitor
               name: monitorcontainer
