dockerregistrysecret.yml
apiVersion: v1
kind: Pod
metadata:
   name: differentpod
spec:
  imagePullSecrets:
      - name: mydockerhubsecret
  containers:
     - image: devopsbaby/updatednginx
       name: mycontainer
       ports:
         - containerPort: 80
