genric-secret.yml
apiVersion: v1
kind: Pod
metadata:
   name: myngpod
   labels:
     app: facebook
spec:
   containers:
       - image: mysql
         name: myngcontainer
         ports:
            - containerPort: 3306
