kubenginxfile.yml
apiVersion: v1
kind: Pod
metadata:
   name: myngpod
spec:
   containers:
       - image: nginx
         name: myngcontainer
         ports:
            - containerPort: 80
              hostPort: 80
