nfs-volume-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: myngpod
   labels:
     app: facebook
spec:
   containers:
       - image: nginx
         name: myngcontainer
         ports:
            - containerPort: 80
         volumeMounts:
            - name: htmlfolder
              mountPath: /usr/share/nginx/html
   volumes:
       - name: htmlfolder
         nfs:
           server: "fs-06ba2715fdb16ebba.efs.ap-south-1.amazonaws.com"
           path: /test
