nodeselectorfile.yml
apiVersion: v1
kind: Pod
metadata:
   name: myngpodweb
   labels:
     website: fb
spec:
  nodeSelector:
    cpu: "true"
  containers:
       - image: nginx
         name: myngcontainer
         ports:
            - containerPort: 80
              hostPort: 80
