nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
   name: nodewalaservice
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
      app: dev
